[travis] install gcc 4.8 for better C++11 support (required to build Brotli)

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,16 @@ python:
   - "3.4"
   - "pypy"
   - "pypy3"
+before_install:
+# install GCC v4.8 with better C++11 support, required to build Brotli extension
+# See: https://github.com/travis-ci/travis-ci/issues/1379  
+  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+  - sudo apt-get -qq update
+  - sudo apt-get install -qq gcc-4.8
+  - sudo apt-get install -qq g++-4.8
+  - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.8 90
+  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 90
+  - g++ --version
 install:
   - pip install -vr requirements.txt
   - make install
